@@ -1,5 +1,6 @@
 1.12
  * Improved support for multiple GPUs (again)
+ * GPU column now respects "Include CPU usage of children" option
 
 1.11
  * Fixed network graph scaling
